# testsmith.nvim

./: Cargo.toml  Makefile  README.md  README_BUILD.md  SETUP_COMPLETE.md  TESTING_WORKFLOW.md
.github/workflows/: build-libraries.yml
docs/: BUILD.md  BUILD_AUTOMATION.md  BUILD_COMPLETE.md  BUILD_DESIGN.md  BUILD_SUMMARY.md  DEVELOPMENT.md  DISTRIBUTION.md  PLUGIN_README.md  QUICK_START.md
examples/: nvim-config.lua
lib/macos-arm64/: libtestsmith_nvim.dylib
lua/testsmith/: ffi.lua  init.lua
plugin/: testsmith.lua
scripts/: build-all.sh  build-release.sh  copy-libs.sh
src/: cli.rs  error.rs  ffi.rs  file_ops.rs  generator.rs  lib.rs  main.rs
src/cache/: mod.rs
src/config/: framework.rs  framework_detector.rs  language.rs  mod.rs  project_root.rs  structure.rs  structure_detector.rs
src/resolver/: maven.rs  mod.rs  same_file.rs  traits.rs
src/template/: java_junit.rs  java_junit4.rs  mod.rs  registry.rs  rust_native.rs  traits.rs
